# minecraft-clone

./: .gitignore  README.md  pyproject.toml
minecraft_clone/: main.py
minecraft_clone/engine/: camera.py  game.py  world.py
tests/: test_world.py
