[project]
name = "minecraft-clone"
version = "0.1.0"
description = "A Minecraft clone built with Python and Pygame"
authors = [
    {name = "User"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "pyopengl (>=3.1.9,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "perlin-noise (>=1.13,<2.0)",
    "noise (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
